# Data Parallel Control (dpctl)
#
# Copyright 2020-2025 Intel Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
build-backend = "scikit_build_core.build"
requires = [
  "scikit-build-core>=0.8.0",
  "cython>=3.0.10",
  "dpctl",
  "numpy"
]

[project]
authors = [{name = "Intel Corporation"}]
dependencies = ["dpctl", "numpy"]
description = "An example of Cython extension calling SYCL Cython API"
license = {text = "Apache 2.0"}
name = "use_dpctl_sycl"
requires-python = ">=3.10"
version = "0.0.0"

[project.urls]
Repository = "https://github.com/IntelPython/dpctl"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
wheel.packages = ["use_dpctl_sycl"]
